...
                )
            }

            is DirectionsStep.PlanRoute -> {
                BottomCard {
                    Text(
                        text = "Route options",
                        style = MaterialTheme.typography.titleMedium,
                        fontWeight = FontWeight.SemiBold
                    )

                    Spacer(Modifier.height(8.dp))

...
                }
            }

            is DirectionsStep.ShowingRoute -> {
                BottomCard {
                    Text(
                        text = "Directions ready",
                        style = MaterialTheme.typography.titleMedium,
                        fontWeight = FontWeight.SemiBold
                    )

                    Spacer(Modifier.height(8.dp))
                    Text("From: ${latLngShort(step.origin)}")
...
